www/src/styles/base/globals.css
:root {
  --bar-graph-height: 0px;
  --bar-graph-width: 0px;
  --container-lg-padding: 48px;
  --container-md-padding: 36px;
  --container-sm-padding: 16px;
}

html {
  scroll-behavior: smooth;
}

body {
  max-width: 100vw;
  overflow-x: hidden;
}

.ContentArea {
  /* Add spacing between components  */
  > div + div {
    margin-bottom: theme('spacing.8');
  }
  /* Last component should not have spacing  */
  > div:last-child {
    margin-bottom: 0;
  }

  /* Any component with this class name will not have spacing below  */
  > .remove-between-component-margin {
    margin-bottom: 0;
  }
}

svg {
  .icon-base,
  .icon-overlap {
    fill: currentColor;
  }
  .icon-base-stroke,
  .icon-overlap-stroke {
    stroke: currentColor;
  }
}

button:disabled,
button[disabled] {
  svg {
    .icon-base {
      fill: theme('colors.grey');
    }
    .icon-overlap {
      fill: theme('colors.grey-medium');
    }
  }
}

img {
  max-width: 100%;
}
/* base styles for SimpleIcon wrapper */
.icon-wrapper {
  width: 1em;
  color: theme('colors.midnight');

  svg {
    width: 100%;
    fill: currentColor;
  }
}

/* Video */
.video {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}

.video iframe,
.video object,
.video embed {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
}

/* Hides caption from posterImage within video component */
#video-component #video-poster-image figcaption {
  display: none;
}

/*
 * Reference:
 * https://www.figma.com/file/2ghg22zsQKeysX5YUcDP5d/%5BFirefly%5D-Design-System?type=design&node-id=3801%3A6956&mode=dev
 */

.font-size-1 {
  font-size: 96px;
  line-height: 90%;
  letter-spacing: -0.04em;
  font-weight: 500;

  @screen md {
    font-size: 120px;
  }
  @screen lg {
    font-size: min(192px, 10vw);
  }
}

.font-size-2 {
  font-size: 52px;
  line-height: 90%;
  letter-spacing: -0.04em;
  font-weight: 500;

  @screen md {
    font-size: 72px;
  }
  @screen lg {
    font-size: min(140px, 7.25vw);
  }
}

.font-size-3 {
  font-size: 48px;
  line-height: 90%;
  letter-spacing: -0.03em;
  font-weight: 500;

  @screen md {
    font-size: 64px;
  }
  @screen lg {
    font-size: min(108px, 5.625vw);
  }
}

.font-size-4 {
  font-size: 32px;
  letter-spacing: -0.02em;
  line-height: 100%;
  font-weight: 500;

  @screen md {
    font-size: 43px;
  }
  @screen lg {
    font-size: 54px;
  }
}

.font-size-5 {
  font-size: 24px;
  line-height: 115%;
  letter-spacing: -0.015em;
  font-weight: 500;

  @screen md {
    font-size: 34px;
  }
  @screen lg {
    font-size: 44px;
  }

  &--quote {
    @apply font-size-5;
    @apply font-trust;
    font-weight: 400;
    letter-spacing: -0.02em;
  }
}

.font-size-6 {
  font-size: 20px;
  line-height: 120%;
  letter-spacing: -0.01em;
  font-weight: 500;

  @screen md {
    font-size: 26px;
  }
  @screen lg {
    font-size: 32px;
  }

  &--quote {
    @apply font-size-6;
    @apply font-trust;
    font-weight: 400;
    letter-spacing: -0.01em;
  }
}

.font-size-7 {
  font-size: 18px;
  line-height: 120%;
  font-weight: 400;

  @screen md {
    font-size: 21px;
  }
  @screen lg {
    font-size: 24px;
  }
}

.font-size-8 {
  font-size: 16px;
  line-height: 140%;
  font-weight: 400;

  @screen md {
    font-size: 18px;
  }

  &--cta {
    @apply font-size-8;
    line-height: 100%;
  }
}

.font-size-9 {
  font-size: 14px;
  line-height: 140%;
  letter-spacing: 0.02em;
  font-weight: 500;
}

.font-size-10 {
  font-size: 12px;
  line-height: 140%;
  letter-spacing: 0.02em;
  font-weight: 400;
}

/**
 * General theme styles
 */

:root,
.theme-white {
  --bg-color: theme('colors.white');
  --text-color-primary: theme('colors.midnight');
  --text-color-secondary: theme('colors.grey-darker');
  --text-color-decorative: theme('colors.sienna');
  --border-color: theme('colors.grey-medium');

  --cta-text-color-primary: theme('colors.midnight');
  --cta-bg-color-primary: theme('colors.yellow');
  --cta-text-color-secondary: theme('colors.midnight');
  --cta-bg-color-secondary: theme('colors.grey');

  --icon-base: theme('colors.yellow');
  --icon-overlap: theme('colors.yellow-dark');
}

.theme-grey {
  --bg-color: theme('colors.grey');
  --text-color-primary: theme('colors.midnight');
  --text-color-secondary: theme('colors.grey-darker');
  --text-color-decorative: theme('colors.sienna');
  --border-color: theme('colors.grey-dark');

  --cta-text-color-primary: theme('colors.midnight');
  --cta-bg-color-primary: theme('colors.yellow');
  --cta-text-color-secondary: theme('colors.midnight');
  --cta-bg-color-secondary: theme('colors.grey-medium');

  --icon-base: theme('colors.yellow');
  --icon-overlap: theme('colors.orange');
}

.theme-sienna {
  --bg-color: theme('colors.sienna');
  --text-color-primary: theme('colors.yellow-light');
  --text-color-secondary: theme('colors.yellow-light-70');
  --text-color-decorative: theme('colors.yellow');
  --border-color: theme('colors.yellow-light-70');

  --cta-text-color-primary: theme('colors.midnight');
  --cta-bg-color-primary: theme('colors.yellow');
  --cta-text-color-secondary: theme('colors.yellow-light');
  --cta-bg-color-secondary: theme('colors.sienna-dark');

  --icon-base: theme('colors.yellow');
  --icon-overlap: theme('colors.orange');
}

.theme-midnight {
  --bg-color: theme('colors.midnight');
  --text-color-primary: theme('colors.yellow-light');
  --text-color-secondary: theme('colors.yellow-light-70');
  --text-color-decorative: theme('colors.sky');
  --border-color: theme('colors.grey-darker');

  --cta-text-color-primary: theme('colors.midnight');
  --cta-bg-color-primary: theme('colors.yellow');
  --cta-text-color-secondary: theme('colors.yellow-light');
  --cta-bg-color-secondary: theme('colors.midnight-light');

  --icon-base: theme('colors.sky-medium');
  --icon-overlap: theme('colors.sky');
}
/* ... */

